building main part